# amnesia

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
releases/: amnesia
scripts/: build_all.sh
src/: config.rs  lib.rs  main.rs  mem_buffer.rs  persistence.rs  stealth.rs  tui_app.rs
tests/: encryption.rs  persistence_test.rs
