[package]
name = "amnesia"
version = "1.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
crossterm = "0.29.0"
libc = "0.2.180"
ratatui = { version = "0.30.0", features = ["all-widgets", "crossterm"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
zeroize = "1.8.2"
sha2 = "0.10.8"
chacha20 = "0.9.1"
getrandom = "0.2.14"
chacha20poly1305 = "0.10.1"
argon2 = "0.5"
rand = "0.8"
rpassword = "7.3"
hmac = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true # Automatically strip symbols from the binary
